# open-deep-research-with-web-ui

./: .env.example  .gitignore  2.json  Dockerfile  README.md  config.py  db.py  gunicorn.conf.py  odr-config.example.json  output_formatter.py  pyproject.toml  question.md  run.py  run_gaia.py  web_app.py
.github/workflows/: docker-publish.yml
docs/: README_es.md  README_fr.md  README_zh.md
static/css/: main.css
static/js/: app.js  history.js  renderer.js  shortcuts.js  state.js  utils.js
static/js/components/: Header.js  InputPanel.js  SettingsModal.js  Sidebar.js  StepContainer.js
templates/: index.html
